tests/type_guards_this_disabled/type_guards_this_disabled.exp
Error ----------------------------------------------------------------------------------------------------- file.js:4:16

`this` type guards are not enabled. You may opt-in by putting `this_type_guards=true` into the `[options]` section of
your `.flowconfig`. [unsupported-syntax]

   4|   m(this1: C): this is D;
                     ^^^^^^^^^



Found 1 error
